book/tests/snapshots/snapshot__run_display_reference_prql@derive-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/derive-2.prql
---
prql dialect: generic

derive x = 5
