book/tests/snapshots/snapshot__run_display_reference_prql@dialect_and_version-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/dialect_and_version-0.prql
---
prql dialect:postgres

from employees
sort age
take 10


