book/tests/snapshots/snapshot__run_display_reference_prql@dialect_and_version-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/dialect_and_version-2.prql
---
prql dialect:generic version:1

from employees


