book/tests/snapshots/snapshot__run_display_reference_prql@distinct-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/distinct-2.prql
---
prql dialect:generic

from `employees`
group `department` (
  sort `age`
  take 1
)


