book/tests/snapshots/snapshot__run_display_reference_prql@employees-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/examples/employees-0.prql
---
prql dialect:generic

from `salaries`
group [`emp_no`] (
  aggregate [emp_salary = (average `salary`)]
)
join t = `titles` [`emp_no`]
join `dept_emp` side:`left` [`emp_no`]
group [
  `dept_emp.dept_no`,
  `t.title`,
] (
  aggregate [avg_salary = (average `emp_salary`)]
)
join `departments` [`dept_no`]
select [
  `dept_name`,
  `title`,
  `avg_salary`,
]


