book/tests/snapshots/snapshot__run_display_reference_prql@employees-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/examples/employees-1.prql
---
prql dialect:generic

from employees
join salaries [emp_no]
group [
  emp_no,
  gender,
] (
  aggregate [emp_salary = (average salary)]
)
join de = dept_emp [emp_no] side:left
group [
  `de.dept_no`,
  gender,
] (
  aggregate [
  salary_avg = (average emp_salary),
  salary_sd = (stddev emp_salary),
]
)
join departments [dept_no]
select [
  dept_name,
  gender,
  salary_avg,
  salary_sd,
]


