book/tests/snapshots/snapshot__run_display_reference_prql@employees-3.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/examples/employees-3.prql
---
from de = dept_emp
join side:left s = salaries [
  s.emp_no == de.emp_no,
  s"({s.from_date}, {s.to_date}) OVERLAPS ({de.from_date}, {de.to_date})",
]
group [
  de.emp_no,
  de.dept_no,
] (
  aggregate (
  salary = average s.salary
)
)
join employees [~emp_no]
join titles [~emp_no]
select [
  dept_no,
  salary,
  employees.gender,
  titles.title,
]



